# starrail-dictionary

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
.github/workflows/: docker-image.yml
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs
crates/crud/: Cargo.toml
crates/crud/entity/: Cargo.toml
crates/crud/entity/src/: dictionary_item.rs  lib.rs  prelude.rs
crates/crud/migration/: Cargo.toml
crates/crud/migration/src/: lib.rs  m20230713_234200_create_dictionary_item_table.rs
crates/crud/src/: lib.rs
crates/frontend/: Cargo.toml  index.html
crates/frontend/src/: main.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/update_data/: Cargo.toml
crates/update_data/src/: lib.rs  main.rs
