[package]
name = "crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
model = { path = "../model" }

tokio = { version = "1.36", features = ["full"] }

sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-query = "0.30"
sea-orm-migration = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

serde = { version = "1.0", features = ["derive", "serde_derive" ] }
dotenv = "0.15"

serde_json = "1.0"

tracing = "0.1"
tracing-unwrap = "0.10"

log = "0.4"
anyhow = "1.0"
