[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
model = { path = "../model" }
web-sys = "0.3.64"
js-sys = "0.3.64"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.37"
wasm-bindgen = "0.2.87"
yew = { version = "0.20.0", features = ["csr"] }
reqwest = { version = "0.11.18", features = ["json"] }
log = "0.4.19"
yew-hooks = "0.2.0"
thiserror = "1"
