[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
strum = { version = "0.26", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }

[target.'cfg(not(target_family="wasm"))'.dependencies]
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
