[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


tokio = { version = "1.36", features = ["full"] }

serde = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

tracing-unwrap = "0.10"

model = { path = "../model" }
crud = { path = "../crud" }
update_data = { path = "../update_data" }

hyper = { version = "1.1", features = ["full"] }
tower = "0.4"
axum = "0.7"
serde_json = "1.0"
axum-macros = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
axum-valid = "0.15"